# mariadb-operator-backup-metrics

./: Cargo.toml  Dockerfile  README.md  index.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  helm.yaml
charts/mariadb-operator-backup-metrics/: Chart.yaml  values.yaml
charts/mariadb-operator-backup-metrics/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
charts/mariadb-operator-backup-metrics/templates/tests/: test-connection.yaml
src/: crd.rs  lib.rs  main.rs  metrics.rs  server.rs  watcher.rs
