[package]
name = "mariadb-operator-backup-metrics"
version = "0.1.0"
edition = "2021"
description = "Metrics exporter for mariadb-operator backup CRDs"

[dependencies]
k8s-openapi = { version = "0.22", features = ["v1_28"] }
kube = { version = "0.93", features = ["runtime", "derive"] }
schemars = "0.8"
tokio = { version = "1.39", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
either = "1.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
color-eyre = "0.6"
axum = { version = "0.7" } 
tower = { version = "0.5", features = ["util"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3 #'z'
lto = true
codegen-units = 1
